AI処理の実装

--- a/JRP/src/main/resources/messages_ja.properties
+++ b/JRP/src/main/resources/messages_ja.properties
@@ -8,3 +8,5 @@ action.delete.confirm=削除します。よろしいですか？
 action.delete.success=削除しました
 
 ST0002.lineFirstMessage=モチベーショングラフの作成お疲れ様でした!\nこれからあなたの過去の経験を振り返り、やりたいことを一緒に見つけましょう!\nよろしくお願いします!
+
+message.alreadyNextStep=ユーザーはすでに次のステップに進んでいます。
